--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,61 @@
--e .
+attrs==19.1.0
+aws-cdk.assets==1.0.0
+aws-cdk.aws-apigateway==1.0.0
+aws-cdk.aws-applicationautoscaling==1.0.0
+aws-cdk.aws-autoscaling==1.0.0
+aws-cdk.aws-autoscaling-common==1.0.0
+aws-cdk.aws-autoscaling-hooktargets==1.0.0
+aws-cdk.aws-certificatemanager==1.0.0
+aws-cdk.aws-cloudformation==1.0.0
+aws-cdk.aws-cloudfront==1.0.0
+aws-cdk.aws-cloudwatch==1.0.0
+aws-cdk.aws-codebuild==1.0.0
+aws-cdk.aws-codecommit==1.0.0
+aws-cdk.aws-codedeploy==1.0.0
+aws-cdk.aws-codepipeline==1.0.0
+aws-cdk.aws-codepipeline-actions==1.0.0
+aws-cdk.aws-ec2==1.0.0
+aws-cdk.aws-ecr==1.0.0
+aws-cdk.aws-ecr-assets==1.0.0
+aws-cdk.aws-ecs==1.0.0
+aws-cdk.aws-elasticloadbalancing==1.0.0
+aws-cdk.aws-elasticloadbalancingv2==1.0.0
+aws-cdk.aws-events==1.0.0
+aws-cdk.aws-events-targets==1.0.0
+aws-cdk.aws-iam==1.0.0
+aws-cdk.aws-kms==1.0.0
+aws-cdk.aws-lambda==1.0.0
+aws-cdk.aws-logs==1.0.0
+aws-cdk.aws-route53==1.0.0
+aws-cdk.aws-route53-targets==1.0.0
+aws-cdk.aws-s3==1.0.0
+aws-cdk.aws-s3-assets==1.0.0
+aws-cdk.aws-secretsmanager==1.0.0
+aws-cdk.aws-servicediscovery==1.0.0
+aws-cdk.aws-sns==1.0.0
+aws-cdk.aws-sns-subscriptions==1.0.0
+aws-cdk.aws-sqs==1.0.0
+aws-cdk.aws-ssm==1.0.0
+aws-cdk.aws-stepfunctions==1.0.0
+aws-cdk.core==1.0.0
+aws-cdk.custom-resources==1.0.0
+aws-cdk.cx-api==1.0.0
+aws-cdk.region-info==1.0.0
+awscli==1.16.199
+botocore==1.12.189
+cattrs==0.9.0
+colorama==0.3.9
+docutils==0.14
+importlib-resources==1.0.2
+jmespath==0.9.4
+jsii==0.14.1
+-e git+git@github.com:takeru911/cdk-cicd.git@cf468eba78b9e84776b1bc7a7f1d6205eba8f1e9#egg=my_cicd
+publication==0.0.3
+pyasn1==0.4.5
+python-dateutil==2.8.0
+PyYAML==5.1
+rsa==3.4.2
+s3transfer==0.2.1
+six==1.12.0
+typing-extensions==3.7.4
+urllib3==1.25.3
